--- a/packages/docs/src/content/docs/cloud/orama-ai/orama-secure-proxy.mdx
+++ b/packages/docs/src/content/docs/cloud/orama-ai/orama-secure-proxy.mdx
@@ -90,16 +90,16 @@ By selecting the "Encrypt chat messages" option, the Secure Proxy will provide e
 The Secure Proxy can be used in two ways:
 
 1. Using the `@orama/plugin-secure-proxy` npm package (see [the official plugin documentation](/open-source/plugins/plugin-secure-proxy) for details). This will allow you to perform hybrid and vector search with your Orama OSS instance with very little configuration.
-2. Using the `@oramacloud/client` npm package.
+2. Using the `@oramacloud/secure-proxy` npm package.
 
-By utilizing the `@oramacloud/client` npm package, you can generate embeddings and interact with OpenAI's GPT browser models without exposing your OpenAI API key or prompts to your users.
+By utilizing the `@oramacloud/secure-proxy` npm package, you can generate embeddings and interact with OpenAI's GPT browser models without exposing your OpenAI API key or prompts to your users.
 
 ### Generating embeddings
 
 To generate text embeddings, simply import the OramaProxy class, initialize it, and call the generateEmbeddings method:
 
 ```js
-import { OramaProxy } from "@oramacloud/client";
+import { OramaProxy } from "@oramacloud/secure-proxy";
 
 const proxy = new OramaProxy({
   api_key: "<YOUR API KEY>",
@@ -134,7 +134,7 @@ You can accomplish this in two ways: either store the entire response in a singl
 **Using a single variable**:
 
 ```js
-import { OramaProxy } from '@oramacloud/client'
+import { OramaProxy } from '@oramacloud/secure-proxy'
 
 const proxy = new OramaProxy({
   api_key: '<YOUR API KEY>'
@@ -154,7 +154,7 @@ console.log(response)
 **Using async iterators**:
 
 ```js
-import { OramaProxy } from '@oramacloud/client'
+import { OramaProxy } from '@oramacloud/secure-proxy'
 
 const proxy = new OramaProxy({
   api_key: 'zrqplaxa-H46c3f-D9vk8Fg_eJlomMP3'
